--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rsa-js",
+  "name": "rsa-light",
   "version": "1.0.0",
   "description": "RSA library that works on browser and node without any dependencies.",
   "main": "./lib/index",
